refactor: do not use unsupported Java API